--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "react-router": "^4.1.1 ",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.6",
+    "react-scripts-ts": "^3.1.0",
     "react-share": "^2.0.0",
     "react-string-replace": "^0.4.0",
     "react-tap-event-plugin": "^3.0.2",
@@ -117,14 +118,13 @@
     "@types/react-tap-event-plugin": "0.0.30",
     "@types/redux-logger": "^3.0.4",
     "@types/uuid": "^3.4.3",
-    "react-scripts-ts": "^2.17.0",
     "redux-devtools": "^3.4.1",
     "redux-devtools-dock-monitor": "^1.1.3",
     "redux-devtools-extension": "^2.13.2",
     "redux-devtools-log-monitor": "^1.4.0",
     "redux-mock-store": "^1.2.3",
     "ts-node": "^5.0.1",
-    "tslint": "^5.9.1",
+    "tslint": "5.9.1",
     "tslint-config-standard": "^6.0.1",
     "typescript": "^2.8.1"
   },
